tests/baselines/reference/implementsClauseAlreadySeen.errors.txt
==== tests/cases/compiler/implementsClauseAlreadySeen.ts (6 errors) ====
    class C {
        
    }
    class D implements C implements C {
                         ~~~~~~~~~~
!!! error TS1005: '{' expected.
                                    ~
!!! error TS1005: ';' expected.
                                      ~
!!! error TS1005: ';' expected.
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'implements'.
        baz() { }
              ~
!!! error TS1005: ';' expected.
        ~~~
!!! error TS2304: Cannot find name 'baz'.
    }